# cuda_edit_distance

./: CMakeLists.txt  cpu_edit_dist.cpp  cuda_edit_dist.cu  main.cu  par_ed.cu  par_ed.cuh  par_ed_bk.cu  query.cu  transfer.cu
